# midasit_tgc_web_dev

./: .gitattributes  package-lock.json
S2/practice01/: README.md  package-lock.json  package.json
S2/practice01/src/: consume.js  produce.js
practice01/: google.css  google.html  google.js
practice02/: README.md  package-lock.json
practice02/src/: App.css  App.js
practice02/src/components/: Todo.css  Todo.js  Todos.css  Todos.js
practice03/docker/: .env  docker-compose.yml
practice03/docker/db/initdb.d/: create_table.sql
practice04/docker/: docker-compose.yml
practice04/todos-web/: Dockerfile
practice04/todos-web/src/: App.js
practice04/todos-web/src/api/: api.js
practice04/todos-web/src/components/: Todo.js  Todos.js
practice04/todos-web/src/hooks/: useTodos.js
practice05/: README.md
practice05/docker/: docker-compose.yml
practice05/todos-api/: Cargo.toml  README.md
practice05/todos-api-python/: README.md
practice05/todos-api-python/app/: .env_example  crud.py  database.py  main.py  models.py  schema.py
practice05/todos-api-rust/: .env_example  Cargo.toml  LICENSE
practice05/todos-api-rust/src/: main.rs
practice05/todos-api-rust/src/db/: conn.rs  mod.rs
practice05/todos-api-rust/src/db/todo/: schema.rs
practice05/todos-api-rust/src/todo/: controller.rs  mod.rs  service.rs
practice05/todos-api-rust/src/todo/dto/: request.rs  response.rs  todo.rs
practice05/todos-api-spring/: .gitignore  Dockerfile  build.gradle  readme.md  settings.gradle
practice05/todos-api/src/: lib.rs
practice05/todos-api/src/db/: mod.rs
(+58 files in other folders)
